# DeepLearningAndroid

./: CMakeLists.txt  README.md
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lenet_010000.nnp  mnist0_9_result_train.nnp  mnist0_9_result_train2.nnp
app/src/main/cpp/: nnabla_interface.c  nnabla_interface.cpp  nnabla_interface.hpp
app/src/main/java/net/seeeno/deeplearning/: MainActivity.java  SurfaceView.java
app/src/main/res/drawable/: black_square_outline.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
